# pyinseq

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  RELEASECHECKLIST.md  assign.py  barcodes.txt  bowtie.py  config.py  demultiplex.py  example01.fastq  exampleData.md  flow.key  gbkconvert.py  main.py  makefile  map.py  mapReads.py  map_reads.py  mkdocs.yml  old_code.py  processMapping.py  process_mapping.py  pyinseq.py  pyproject.toml  requirements.txt  roadmap.md  run.py  setup.cfg  setup.py  trim_reads.py  utils.py
_exampleData/: example01.fastq  exampleData.md
data/example/: example02.txt
doc/: Installation.md  Makefile  Troubleshooting.md  Tutorial.md  conf.py  index.rst
docs/: Tutorial.md  about.md  comparison.md  conf.py  documentation.md  example.md  index.md  index.rst  installation.md  requirements.txt  roadmap.md  tests.md  troubleshooting.md
docs/_build/doctrees/: About.doctree  (+4 more)
docs/_static/: logo.key
pip-wheel-metadata/pyinseq.dist-info/: LICENSE.md  METADATA  top_level.txt
pyinseq/: __init__.py  analyze.py  config.py  demultiplex.py  gbk_convert.py  gbkconvert.py  logger.py  mapReads.py  map_reads.py  parsers.py  pipeline.py  processMapping.py  process_mapping.py  pyinseq.py  runner.py  settings.py  utils.py
pyinseq/envs/: bowtie.yaml
pyinseq/test/: parse_csv.py  test_functions.py  test_output.py
pyinseq/tests/: test_functions.py  test_output.py  test_script.py  test_utils.py
pyinseq/workflows/: __init__.py
scripts/: config.py  demultiplex.py  gbkconvert.py  mapReads.py  processMapping.py  pyinseq  pyinseq-snakemake  pyinseq.py  utils.py
test/: parse_csv.py  test.py
(+95 files in other folders)
