[metadata]
name = pyinseq
version = 0.3.0
author = Mark J. Mandel
author_email = mandel01@gmail.com
description = Analysis of transposon insertion sequencing (INSeq) data in Python
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_files = LICENSE.md
url = https://github.com/mjmlab/pyinseq
project_urls =
    Documentation = https://github.com/mjmlab/pyinseq/blob/master/README.md
platforms = MacOS, Linux/Unix
classifiers =
    Development Status :: 5 - Production/Stable,
    Intended Audience :: Science/Research,
    License :: OSI Approved :: BSD3 License,
    Operating System :: MacOS :: MacOS X,
    Operating System :: POSIX,
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.7,
    Topic :: Scientific/Engineering :: Bio-Informatics,

[options]
zip_safe = False
package_dir =
    = pyinseq
include_package_data = True
packages = find:
package_data =
    pyinseq/workflows/PyinseqWorkflow/Snakefile,
    workflows/DemultiplexWorkflow/Snakefile
    workflows/GenomeprepWorkflow/Snakefile
    envs/bowtie.yaml
scripts =
    scripts/pyinseq
python_requires = >=3.6.*, >=3.7.*
setup_requires = pytest-runner
tests_require= pytest
install_requires =
    black >=18.9b0
    matplotlib >=1.5.0
    seaborn >=0.6.0
    numpy >=1.10.0
    pandas >=0.18.1
    pre-commit >=1.12.0
    pytest >=2.8.1
    pytest-cov >=2.4.0
    codecov >=2.0.5
    PyYAML >=3.11
    screed >=0.9
    snakemake >=5.31.1
    tqdm >=4.61.2

[options.packages.find]
where = pyinseq